--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.195",
-    "@types/react-sparklines": "^1.7.2"
+    "@types/react-sparklines": "^1.7.2",
+    "prettier": "^3.0.1",
+    "prettier-plugin-tailwindcss": "^0.4.1"
   }
 }
