--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next": "13.4.3",
     "next-themes": "^0.2.1",
     "node-fetch": "^3.3.1",
+    "openai": "^4.29.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
